# dmake

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS  ChangeLog  Makefile  README.md  requirements.txt  setup.cfg
dmake/: __init__.py  azure.py  base_commands.py  cmd.py  command_registry.py  config.py  deploy.py  doc.py  release.py  stack.py  status.py
tests/: conftest.py  fixtures.py  test_basic.py  test_config.py
