[metadata]
name = dmake
author = NumeriCube
author-email = support@numericube.com
summary = A Docker+Swarm-based CI toolset frontend
description-file = README.md
#description-content-type = text/x-rst; charset=UTF-8
home-page = https://dmake.org
project_urls =
    Bug Tracker = https://github.com/numericube/dmake
    Documentation = https://github.com/numericube/dmake
    Source Code = https://github.com/numericube/dmake
license = GPL-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Docker
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    docker
    CI

[files]
packages =
    dmake

[entry_points]
console_scripts =
    dmake = dmake.cmd:main

