[metadata]
name = dmake
author = NumeriCube
author-email = support@numericube.com
summary = A Docker+Swarm-based CI toolset frontend
description-file = README.md
#description-content-type = text/x-rst; charset=UTF-8
home-page = https://dmake.org
project_urls =
    Bug Tracker = https://github.com/numericube/dmake
    Documentation = https://github.com/numericube/dmake
    Source Code = https://github.com/numericube/dmake
license = GPL-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Docker
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    docker
    CI

[files]
packages =
    dmake

[entry_points]
console_scripts =
    dmake = dmake.cmd:main

[options]
zip_safe = False
packages = find:
include_package_data = True
#package_dir =
#    =dmake
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
#install_requires =
#    ruamel.yaml>=0.16.10
#    flake8
#    black
#    pbr
#    pre-commit
#    pytest
#    tox
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
